Building with wayland 1.20.0 fails with undefined reference to 'wl_proxy_marshal_flags'
Building waffle 1.7.0 fails with wayland 1.20.0:
FAILED: bin/wflinfo
: && [...]gcc --std=c99 -Wall -Werror=implicit-function-declaration -fvisibility=hidden -Werror=incompatible-pointer-types -Werror=int-conversion
-Werror=missing-prototypes -O2 -g -DNDEBUG -rdynamic
src/utils/CMakeFiles/wflinfo.dir/wflinfo.c.o -o bin/wflinfo -Wl,-rpath,i[...]/build-target/waffle-1.7.0-build/lib: lib/libwaffle-1.so.0.7.0 && :
[...]/ld: lib/libwaffle-1.so.0.7.0: undefined reference to `wl_proxy_marshal_flags'
collect2: error: ld returned 1 exit status
ninja: build stopped: subcommand failed.
wl_proxy_marshal_flags
is a new symbol in that version.