wayland: fix build against version 1.20

Wayland 1.20 introduces two new symbols wl_proxy_marshal_flags and
wl_proxy_marshal_array_flags, which need to be wrapped as well.

Closes: https://gitlab.freedesktop.org/mesa/waffle/-/issues/76
Signed-off-by: Philipp Zabel <p.zabel@pengutronix.de>